working on ui elements and fixed controls

--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
     <script defer src="snake.js"></script>
   </head>
   <body>
-    <div class="map"></div>
+    <main>
+      <div class="info upper">
+        <h1 class="title">snek</h1>
+        <p class="controls">use arrow keys or wasd to move</p>
+      </div>
+      <div class="map">
+        <div class="restart hidden">
+          <p>you died</p>
+          <p>press SPACE to restart</p>
+        </div>
+      </div>
+      <div class="info lower">
+        <p class="score">score: 0</p>
+      </div>
+    </main>
   </body>
 </html>
