fixed some bugs and added score

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="map">
         <div class="restart hidden">
           <p>you died</p>
-          <p>press SPACE to restart</p>
+          <p>press space to restart</p>
         </div>
       </div>
       <div class="info lower">
