--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Snake</title>
+    <title>snek</title>
     <link rel="stylesheet" href="style.css" />
-    <script defer src="snake.js"></script>
+    <script defer src="snek.js"></script>
   </head>
   <body>
     <main>
