tiny refactoring, added high score and updated readme

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <main>
-      <div class="info upper">
+      <div class="info">
         <h1 class="title">snek</h1>
         <p class="controls">use arrow keys or wasd to move</p>
       </div>
@@ -20,8 +20,9 @@
           <p>press space to restart</p>
         </div>
       </div>
-      <div class="info lower">
+      <div class="info">
         <p class="score">score: 0</p>
+        <p class="high-score">high score: 0</p>
       </div>
     </main>
   </body>
